<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gaeauv.mobile.myappportfolio.MainActivity"
    style="@style/MainMenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/main_title_text"
            android:id="@+id/menu_title"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_weight="0.40"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies_text_button"
            android:id="@+id/popular_movies_text_button"
            android:layout_gravity="center_horizontal"
            style="@style/MainMenu.Buttons" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk_text_button"
            android:id="@+id/stock_hawk_text_button"
            android:layout_gravity="center_horizontal"
            style="@style/MainMenu.Buttons" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_text_button"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            style="@style/MainMenu.Buttons" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material_text_button"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            style="@style/MainMenu.Buttons" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous_text_button"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            style="@style/MainMenu.Buttons" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone_text_button"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            style="@style/MainMenu.Buttons" />
    </LinearLayout>
</RelativeLayout>
